# ur_controller

./: .gitignore  CLAUDE.md  CMakeLists.txt
apps/: CMakeLists.txt  connection_test.cpp  web_server_main.cpp
docker/: Dockerfile.dev  README.md  docker-compose.yml
docs/: SUMMARY.md  architecture.md
gui/: CMakeLists.txt  main.cpp  mesh_loader.cpp  mesh_loader.hpp  robot_viewer.cpp  robot_viewer.hpp
include/ur_controller/: version.hpp
include/ur_controller/kinematics/: dh_parameters.hpp  types.hpp  ur_kinematics.hpp
include/ur_controller/trajectory/: axis_blend_planner.hpp  executor.hpp  path_geometry.hpp  planner.hpp  s_curve.hpp  types.hpp  validator.hpp
include/ur_controller/trajectory/velocity_first/: planner.hpp  types.hpp
include/ur_controller/webui/: robot_state_manager.hpp  web_server.hpp  websocket_broadcaster.hpp
src/kinematics/: dh_parameters.cpp  ur_kinematics.cpp
src/trajectory/: axis_blend_planner.cpp  executor.cpp  path_geometry.cpp  planner.cpp  s_curve.cpp  types.cpp  validator.cpp
src/trajectory/velocity_first/: planner.cpp
src/webui/: robot_state_manager.cpp  web_server.cpp  websocket_broadcaster.cpp
test/: CMakeLists.txt  analyze_ik.cpp  repro_joint_flip.cpp  test_kinematics.cpp  test_path_geometry.cpp  test_placeholder.cpp  test_s_curve.cpp  test_trajectory.cpp
webui/: CMakeLists.txt  chart-popup.html  index.html  robot-viewer-popup.html
webui/css/: styles.css
webui/js/: app.js  control-panel.js  jog-controller.js  robot-viewer.js  terminal-controller.js  trajectory-panel.js  websocket-client.js
webui/urdf/: ur5e.urdf
